<?xml version="1.0"?>
<package format="2">
  <name>stereo</name>
  <description>stereo</description>
  <version>0.0.0</version>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>
  <maintainer email="temp@todo.todo">temp</maintainer> 
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export></export>

</package>



